# topology

./: .cookiecutter.json  .coveragerc  .gitchangelog.rc  .gitignore  .travis.yml  2_0_0_plan.rst  MANIFEST.in  README.rst  pyproject.toml  release.rst  requirements.dev.txt  requirements.doc.txt  requirements.txt  setup.py  testtt  tox.ini
doc/: architecture.rst  conf.py  developer.rst  index.rst  logging.rst  openvswitch.rst  p4switch.rst  plugins.rst  reference.rst  requirements.txt  user.rst
examples/: example1.py  p4.szn  ryu.net  ryu.szn  test_basic_topology.py
test/: pytest.ini  requirements.txt  test_executable.py  test_injection.py  test_parser.py  test_platform.py  test_platform_mininet.py  test_pyszn.py  test_switch.py  test_topology.py  test_topology_args.py  test_topology_connect.py  test_topology_docker.py  test_topology_docker_nodes_host.py  test_topology_docker_nodes_host_routes.py  test_topology_docker_nodes_openswitch_port_labels.py  test_topology_docker_nodes_openvswitch.py  test_topology_docker_nodes_openvswitch_basic.py  test_topology_docker_nodes_openvswitch_port_labels.py  test_topology_docker_nodes_openvswitch_vlan.py  test_topology_docker_nodes_p4switch_basic.py  test_topology_docker_nodes_ryu_openvswitch_basic.py  test_topology_docker_nodes_switch.py  test_topology_docker_nodes_toxin.py  test_topology_docker_platform.py  test_topology_docker_toxin.py  test_topology_fail.py  test_topology_id.py  test_topology_injection.py  test_topology_libraries_manager.py  test_topology_lonely_node.py  test_topology_main.py  test_topology_manager.py  test_topology_nodes_host.py  test_topology_nodes_openvswitch.py  test_topology_nodes_openvswitch_basic.py  test_topology_nodes_openvswitch_port_labels.py  test_topology_nodes_openvswitch_vlan.py  test_topology_nodes_p4switch_basic.py  (+9 more)
(+90 files in other folders)
